--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -52,16 +52,27 @@
     align-items: center;
     margin-left: auto;
     gap: 6px;
-
+    
+    
     button {
+        opacity: 0;
+        visibility: hidden;
         padding: 10px;
         background-color: transparent;
         box-sizing: border-box;
+        transition: all .2s;
     }
 
     img {
         height: 12px;
         width: 12px;
+    }
+
+    &.visible {
+        button {
+            opacity: 1;
+            visibility: visible;
+        }
     }
 }
 
