--- a/special-pages/pages/new-tab/app/activity/components/Activity.module.css
+++ b/special-pages/pages/new-tab/app/activity/components/Activity.module.css
@@ -1,44 +1,30 @@
 .root {
+    display: grid;
+}
 
+.activity {
     --favicon-width: 32px;
     --heading-gap: 8px;
 
 
-    background: var(--ntp-surface-background-color);
-    backdrop-filter: blur(48px);
-    border: 1px solid var(--ntp-surface-border-color);
-    padding: var(--sp-6);
-    border-radius: var(--border-radius-lg);
-    display: grid;
-    align-items: start;
-    grid-template-columns: auto;
-    width: 100%;
-    margin-bottom: var(--ntp-gap);
-
-    .listExpander * {
-        opacity: 1;
-    }
-
-    [data-theme=dark] & {
-        border-color: var(--color-white-at-9);
-    }
-}
-
-.activity {
     overflow: hidden;
     width: calc(100% + 12px);
     margin-left: -6px;
+
+    &:not(:empty) {
+        margin-top: 24px;
+    }
+}
+
+.block {
+    margin-top: 24px;
 }
 
 .loader {
-    height: 40px;
+    height: 10px;
     border: 1px dotted black;
     border-radius: 5px;
     opacity: 0;
-}
-
-.activity:not(:empty) {
-    margin-top: 18px;
 }
 
 .anim {
