--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -1,68 +1,52 @@
-.root {
-    background: var(--ntp-surface-background-color);
-    backdrop-filter: blur(48px);
-    border: 1px solid var(--ntp-surface-border-color);
-    padding: var(--sp-6);
-    border-radius: var(--border-radius-lg);
-    display: grid;
-    align-items: start;
-    grid-template-columns: auto;
-    width: 100%;
-    margin-bottom: var(--ntp-gap);
+.heading {}
 
-    &:hover {
-        .listExpander * {
-            opacity: 1;
-        }
-    }
-
-    [data-theme=dark] & {
-        border-color: var(--color-white-at-9);
-    }
-}
-
-.heading {
-    display: grid;
-    grid-template-columns: 1.5rem auto 2rem;
-    grid-column-gap: var(--sp-2);
-    grid-row-gap: var(--sp-1);
-    grid-template-rows: auto auto;
-    grid-template-areas:
-        'icon title expander'
-        'empty label label';
-
-    &.activityVariant {
-        padding-left: 6px;
-        grid-column-gap: 10px;
-    }
+.control {
+    display: flex;
+    align-items: center;
+    height: 24px;
+    margin-bottom: 16px;
+    position: relative;
+    gap: 8px;
 }
 
 .headingIcon {
-    grid-area: icon;
-    width: 1.5rem;
-    height: var(--title-2-line-height);
+    width: 24px;
+    height: 24px;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 0.5px;
+}
 
-    /* In this variant, everything is moved over to align with the body items (which are different to the stats */
-    .activityVariant & {
-        width: 24px;
-        height: 24px;
+.caption {
+    font-size: var(--title-3-em-font-size);
+    font-weight: var(--title-3-em-font-weight);
+    line-height: var(--title-3-em-line-height);
+    flex: 1;
+}
 
-        img {
-            display: block;
-            width: 20px;
-            height: 20px;
-        }
+.widgetExpander {
+    position: relative;
+
+    & [aria-controls] {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        opacity: 1;
+        /**
+         * NOTE: This is just for visual alignment. The grid in which this sits is correct,
+         * but to preserve the larger tap-area for the button, we're opting to shift this over
+         * manually to solve this specific layout case.
+         */
+        right: -4px
     }
+}
 
-    .adsAndTrackersVariant & img {
-        width: 16px;
-        height: 16px;
-    }
+.counter {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 .title {
@@ -85,46 +69,24 @@
     }
 }
 
-.widgetExpander {
-    position: relative;
-
-    & [aria-controls] {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        opacity: 1;
-        /**
-         * NOTE: This is just for visual alignment. The grid in which this sits is correct,
-         * but to preserve the larger tap-area for the button, we're opting to shift this over
-         * manually to solve this specific layout case.
-         */
-        right: -4px
-    }
-}
-
 .subtitle {
     grid-area: label;
     color: var(--ntp-text-muted);
 
     &.uppercase {
-        line-height: 1;
+        line-height: var(--body-line-height);
         text-transform: uppercase;
     }
 
     &.indented {
         padding-left: 2px;
     }
-
-    .adsAndTrackersVariant & {
-        font-size: var(--small-label-font-size);
-        letter-spacing: 0.06px;
-        line-height: var(--small-label-line-height);
-    }
 }
 
 .body {
     display: grid;
     grid-row-gap:  var(--sp-3);
+
 }
 
 .list {
@@ -132,50 +94,9 @@
     grid-template-columns: auto;
     grid-row-gap: calc(6 * var(--px-in-rem));
     transition: opacity ease-in-out 0.3s, visibility ease-in-out 0.3s;
-    margin-top: 18px;
-}
 
-.entering {
-    opacity: 0;
-    visibility: hidden;
-    animation-name: fade-in;
-    animation-delay: .1s;
-    animation-duration: .3s;
-    animation-fill-mode: forwards;
-}
-
-.entered {
-    opacity: 1;
-    visibility: visible;
-}
-
-.exiting {
-    animation-name: fade-out;
-    animation-duration: .3s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-        visibility: hidden;
-    }
-
-    100% {
-        opacity: 1;
-        visibility: visible;
-    }
-}
-
-@keyframes fade-out {
-    0% {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    100% {
-        opacity: 0;
-        visibility: hidden;
+    &:not(:empty) {
+        margin-top: 24px;
     }
 }
 
