--- a/special-pages/pages/history/app/components/App.module.css
+++ b/special-pages/pages/history/app/components/App.module.css
@@ -14,7 +14,7 @@ body {
     --sidebar-width: 250px;
     --main-padding-left: 48px;
     --main-padding-right: 76px;
-    --scrollbar-width: 18px;
+
 
     &[data-layout-mode="reduced"] {
         --sidebar-width: 230px;
@@ -50,6 +50,8 @@ body {
 .aside {
     grid-area: aside;
     padding: 10px 16px;
+    /* Internals will handle this to accommodate a scrollbar */
+    padding-right: 0;
     border-right: 1px solid var(--history-surface-border-color);
 }
 .main {
@@ -61,53 +63,7 @@ body {
 }
 
 .customScroller {
-    overflow-y: scroll;
     padding-right: calc(var(--main-padding-right) - var(--scrollbar-width));
-}
-
-/**
- * Windows has access to newer CSS features for styling the scrollbar
- */
-[data-platform="windows"] {
-    .customScroller {
-        scrollbar-gutter: stable;
-        scrollbar-width: var(--scrollbar-width);
-        scrollbar-color: var(--history-scrollbar-controls-color) var(--history-background-color);
-    }
-}
-
-/**
- * macOS specific styling to handle dark mode - without this full
- * override you cannot change the track color :(
- */
-[data-platform="macos"] {
-    .customScroller {
-        --webkit-thumb-color: rgba(136, 136, 136, 0.8);
-
-        &::-webkit-scrollbar {
-            width: var(--scrollbar-width);
-        }
-
-        &::-webkit-scrollbar-track {
-            background-color: var(--history-background-color)
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background-color: var(--webkit-thumb-color);
-            border-radius: calc(var(--scrollbar-width) / 2);
-
-            /** faking some padding on the thumb */
-            border: 4px solid var(--history-background-color);
-        }
-
-        &::-webkit-scrollbar-button {
-            display: block;
-            background-color: var(--history-background-color);
-
-            /** a small vertical gap to prevent it touching boundaries */
-            height: 2px;
-        }
-    }
 }
 
 .paddedError {
