--- a/special-pages/pages/history/app/components/Sidebar.module.css
+++ b/special-pages/pages/history/app/components/Sidebar.module.css
@@ -1,6 +1,9 @@
 .stack {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    height: 100%;
+
     > * {
         min-width: 0
     }
@@ -13,7 +16,9 @@
     line-height: 24px;
     padding: 10px 6px 10px 10px;
 }
-.nav {}
+.nav {
+    padding-right: var(--scroll-bar);
+}
 .item {
     position: relative;
     border-radius: 8px;
@@ -37,6 +42,7 @@
 
 .active {
     background: var(--color-black-at-12);
+    overflow-y: auto;
     &:hover {
         background: var(--color-black-at-18);
     }
