--- a/special-pages/pages/history/styles/history-theme.css
+++ b/special-pages/pages/history/styles/history-theme.css
@@ -23,6 +23,7 @@
 body {
     --default-light-background-color: var(--color-gray-0);
     --default-dark-background-color: var(--color-gray-85);
+    --scrollbar-width: 18px;
 }
 
 /* This comes from the application settings */
@@ -67,4 +68,57 @@ body {
     --history-text-normal: var(--color-white-at-84);
     --history-text-invert: var(--color-black-at-84);
     --history-text-muted: var(--color-white-at-60);
+}
+
+/**
+ * The scrollbar is a custom scroller that is used in the main
+ * content area and the sidebar nav.
+*/
+.customScroller {
+    overflow-y: scroll;
+}
+
+/**
+ * Windows has access to newer CSS features for styling the scrollbar
+ */
+[data-platform="windows"] {
+    .customScroller {
+        scrollbar-gutter: stable;
+        scrollbar-width: var(--scrollbar-width);
+        scrollbar-color: var(--history-scrollbar-controls-color) var(--history-background-color);
+    }
+}
+
+/**
+ * macOS specific styling to handle dark mode - without this full
+ * override you cannot change the track color :(
+ */
+[data-platform="macos"] {
+    .customScroller {
+        --webkit-thumb-color: rgba(136, 136, 136, 0.8);
+
+        &::-webkit-scrollbar {
+            width: var(--scrollbar-width);
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: var(--history-background-color)
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--webkit-thumb-color);
+            border-radius: calc(var(--scrollbar-width) / 2);
+
+            /** faking some padding on the thumb */
+            border: 4px solid var(--history-background-color);
+        }
+
+        &::-webkit-scrollbar-button {
+            display: block;
+            background-color: var(--history-background-color);
+
+            /** a small vertical gap to prevent it touching boundaries */
+            height: 2px;
+        }
+    }
 }
